fix: 修复一些页面逻辑bug
